--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,28 @@
-beautifulsoup4==4.12.3
-cachetools==5.3.2
-certifi==2024.2.2
-charset-normalizer==3.3.2
+altgraph==0.17.4
+beautifulsoup4==4.13.3
+cachetools==5.5.1
+certifi==2025.1.31
+cffi==2.0.0
+charset-normalizer==3.4.1
+cryptography==46.0.3
 feedparser==6.0.11
-idna==3.6
-lxml==5.1.0
-PyQt5==5.15.10
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.13.0
-PyQtWebEngine==5.15.6
-PyQtWebEngine-Qt5==5.15.2
-python-dateutil==2.8.2
-requests==2.31.0
+idna==3.10
+lxml==5.3.0
+packaging==24.2
+pefile==2023.2.7
+pycparser==2.23
+pyinstaller==6.12.0
+pyinstaller-hooks-contrib==2025.1
+PySide6==6.8.2.1
+PySide6_Addons==6.8.2.1
+PySide6_Essentials==6.8.2.1
+python-dateutil==2.9.0.post0
+pywin32-ctypes==0.2.3
+requests==2.32.3
+setuptools==75.8.0
 sgmllib3k==1.0.0
-six==1.16.0
-soupsieve==2.5
-urllib3==2.2.0
+shiboken6==6.8.2.1
+six==1.17.0
+soupsieve==2.6
+typing_extensions==4.12.2
+urllib3==2.3.0
